// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": 31270,
      "size": 30,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1070,
            },
            "index.js": {
              "offset": 1210,
              "size": 370,
            },
            "package.json": {
              "offset": 1580,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 120,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2870,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3010,
              "size": 1070,
            },
            "index.js": {
              "offset": 4080,
              "size": 840,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6320,
              "size": 110,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 500,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 240,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9330,
                  "size": 1440,
                },
              },
            },
            "test.js": {
              "offset": 10770,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 20,
            },
            "index.js": {
              "offset": 14800,
              "size": 50,
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": 14990,
                      "size": 10,
                    },
                    ".nycrc": {
                      "offset": 15000,
                      "size": 140,
                    },
                    "LICENSE": {
                      "offset": 15140,
                      "size": 1070,
                    },
                    "index.js": {
                      "offset": 16210,
                      "size": 740,
                    },
                    "package.json": {
                      "offset": 16950,
                      "size": 960,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": 14850,
              "size": 140,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 17900,
              "size": 1100,
            },
            "browser.js": {
              "offset": 19000,
              "size": 5420,
            },
            "index.js": {
              "offset": 24420,
              "size": 100,
            },
            "package.json": {
              "offset": 24510,
              "size": 450,
            },
            "test.js": {
              "offset": 24960,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 31300,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 2`] = `
{
  "files": {
    "index.js": {
      "offset": 28330,
      "size": 30,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1070,
            },
            "index.js": {
              "offset": 1210,
              "size": 370,
            },
            "package.json": {
              "offset": 1580,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 120,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2870,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3010,
              "size": 1070,
            },
            "index.js": {
              "offset": 4080,
              "size": 840,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6320,
              "size": 110,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 500,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 240,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9330,
                  "size": 1440,
                },
              },
            },
            "test.js": {
              "offset": 10770,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 20,
            },
            "index.js": {
              "offset": 14800,
              "size": 50,
            },
            "package.json": {
              "offset": 14850,
              "size": 110,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 14960,
              "size": 1100,
            },
            "browser.js": {
              "offset": 16060,
              "size": 5420,
            },
            "index.js": {
              "offset": 21480,
              "size": 100,
            },
            "package.json": {
              "offset": 21570,
              "size": 450,
            },
            "test.js": {
              "offset": 22020,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28370,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": 31270,
      "size": 30,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1070,
            },
            "index.js": {
              "offset": 1210,
              "size": 370,
            },
            "package.json": {
              "offset": 1580,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 120,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2870,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3010,
              "size": 1070,
            },
            "index.js": {
              "offset": 4080,
              "size": 840,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6320,
              "size": 110,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 500,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 240,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9330,
                  "size": 1440,
                },
              },
            },
            "test.js": {
              "offset": 10770,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 20,
            },
            "index.js": {
              "offset": 14800,
              "size": 50,
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": 14990,
                      "size": 10,
                    },
                    ".nycrc": {
                      "offset": 15000,
                      "size": 140,
                    },
                    "LICENSE": {
                      "offset": 15140,
                      "size": 1070,
                    },
                    "index.js": {
                      "offset": 16210,
                      "size": 740,
                    },
                    "package.json": {
                      "offset": 16950,
                      "size": 960,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": 14850,
              "size": 140,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 17900,
              "size": 1100,
            },
            "browser.js": {
              "offset": 19000,
              "size": 5420,
            },
            "index.js": {
              "offset": 24420,
              "size": 100,
            },
            "package.json": {
              "offset": 24510,
              "size": 450,
            },
            "test.js": {
              "offset": 24960,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 31300,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated 2`] = `
{
  "files": {
    "index.js": {
      "offset": 28330,
      "size": 30,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1070,
            },
            "index.js": {
              "offset": 1210,
              "size": 370,
            },
            "package.json": {
              "offset": 1580,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 120,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2870,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3010,
              "size": 1070,
            },
            "index.js": {
              "offset": 4080,
              "size": 840,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6320,
              "size": 110,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 500,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 240,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9330,
                  "size": 1440,
                },
              },
            },
            "test.js": {
              "offset": 10770,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 20,
            },
            "index.js": {
              "offset": 14800,
              "size": 50,
            },
            "package.json": {
              "offset": 14850,
              "size": 110,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 14960,
              "size": 1100,
            },
            "browser.js": {
              "offset": 16060,
              "size": 5420,
            },
            "index.js": {
              "offset": 21480,
              "size": 100,
            },
            "package.json": {
              "offset": 21570,
              "size": 450,
            },
            "test.js": {
              "offset": 22020,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28370,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > local file:// protocol with npm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with pnpm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with traversal for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn-berry for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": 24710,
              "size": 30,
            },
          },
        },
        "readme.md": {
          "offset": 24740,
          "size": 80,
        },
      },
    },
    "index.html": {
      "offset": 24820,
      "size": 840,
    },
    "index.js": {
      "offset": 25660,
      "size": 4180,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 29840,
      "size": 370,
    },
  },
}
`;

exports[`Package Managers > pnpm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > pnpm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": 24710,
              "size": 30,
            },
          },
        },
        "readme.md": {
          "offset": 24740,
          "size": 80,
        },
      },
    },
    "index.html": {
      "offset": 24820,
      "size": 840,
    },
    "index.js": {
      "offset": 25660,
      "size": 4180,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 29840,
      "size": 510,
    },
  },
}
`;

exports[`Package Managers > traversal hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal hoisted 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 310,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26010,
          "size": 710,
        },
      },
    },
  },
}
`;

exports[`Package Managers > traversal multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 320,
    },
  },
}
`;

exports[`Package Managers > traversal workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 320,
    },
  },
}
`;

exports[`Package Managers > yarn 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 340,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26050,
          "size": 710,
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 310,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26010,
          "size": 710,
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 320,
    },
  },
}
`;

exports[`Package Managers > yarn berry workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 320,
    },
  },
}
`;

exports[`Package Managers > yarn multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 350,
    },
  },
}
`;

exports[`Package Managers > yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 840,
    },
    "index.js": {
      "offset": 25550,
      "size": 2500,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6100,
                },
                "common.js": {
                  "offset": 8150,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 310,
                },
                "node.js": {
                  "offset": 15380,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3020,
            },
            "license.md": {
              "offset": 23130,
              "size": 1080,
            },
            "package.json": {
              "offset": 24210,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28050,
      "size": 350,
    },
  },
}
`;
